# four_arm_robot

./: README.md
extend/: readme.md
extend/trt_inference/: setup.py  yolo11_detect_trt.cpp
extend/ultralytics/: distillation.md  distillation.py  export_run.py  voc2txt.py
model_weights/: readme.txt
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: gazebo_bridge.yaml  ros2_controllers.yaml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/models/blue_box/: model.config  model.sdf
src/my_robot_bringup/models/calibration_checkerboard/: generate_texture.py  model.config  model.sdf
src/my_robot_bringup/models/calibration_checkerboard/materials/scripts/: checkerboard.material
src/my_robot_bringup/models/red_box/: model.config  model.sdf
src/my_robot_bringup/models/yellow_box/: model.config  model.sdf
src/my_robot_bringup/worlds/: world_room.sdf  world_room_last.sdf  world_test.sdf
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: branch_arm_unit.xml.xacro  far_common_properties.xml.xacro  four_arm_robot.xml.xacro  main_arm_units.xml.xacro  mobile_base_part.xml.xacro  my_robot.ros2_control.xacro  stereo_camera.xml.xacro  unit_camera.xml.xacro
src/panorama_camera/: package.xml  setup.cfg  setup.py
src/panorama_camera/panorama_camera/: concat_process.md  detect_locate.py  display_four_camera.py  four_camera_concat.py  yolo_onnx.py
src/robot_commander/: CMakeLists.txt  package.xml
src/robot_commander/include/robot_commander/: veer_commander.hpp  wheel_commander.hpp
src/robot_commander/src/: test_moveit.cpp  veer_commander.cpp  veer_commander_test.cpp  wheel_command.cpp  wheel_commander.cpp  wheel_commander_test.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: VeerJointGroup.msg
src/robot_moveit_config/: .setup_assistant  package.xml
src/robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  my_robot.ros2_control.xacro  my_robot.srdf  my_robot.urdf.xacro  ros2_controllers.yaml
src/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  move_group_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/stereo_camera/: package.xml  setup.cfg  setup.py
src/stereo_camera/stereo_camera/: camera_display.py
